public/css/scss/styles.scss
body {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  background-size: 25px 25px;
  //background-image: radial-gradient(farthest-corner at 1px 1px, #bbbbbb 1px, rgba(0, 0, 0, 0) 1px);
  background-image: linear-gradient(to right, #ededed 1px, transparent 1px), linear-gradient(to bottom, #ededed 1px, transparent 1px);
}



#container {
  width: 100%;
  display: flex;
}

.workspace-wrapper {
  padding: 30px;
  float: left;
  flex: 1;
}

#linespace {
  width: 100vw;
  height: 100vh;
  z-index: 10;
  position: absolute;
  top: 0;
  left: 0;
}

/* ------ WORKSPACE ELEMENTS ------ */

#workspace-info {
  position: absolute;
  top: 50px;
  right: 50px;
}

input {
  float: left;
  width: calc((100vw - 650px)/2);
  border: 2px solid transparent;
  border-bottom: 2px solid #000;
  background-color: transparent;
  font-family: 'Work Sans', sans-serif;
  font-weight: 400;
  padding: 10px;
  font-size: 16px;
  margin-right: 10px;
}
input:active, input:focus {
  outline: none;
  border: 2px solid #000;
}

button#save {
  float: left;
  border: 2px solid #000;
  font-family: 'Work Sans', sans-serif;
  font-weight: 700;
  padding: 10px;
  font-size: 16px;
  color: #000;
  background-color: #fff;
}

button#save:hover {
  background-color: #000;
  color: #fff;
}



.clearfix {
  clear: both;;
}



/* ------ LIST PANEL ------ */
.list-wrapper {
  z-index: 2000;
  box-sizing: border-box;
  width: 250px;
  max-height: calc(100vh - 102px);;
  margin: 50px;

  position: absolute;
  // top: 50px;
  // left: 50px;

  padding: 10px 30px;
  overflow: scroll;

  background-color: #fff;
  border: 2px solid #000;

  #list-view-toggle {
      h1 {
        float:left;
        width: 50%;
        font-size: 16px;
        font-family: 'Work Sans', sans-serif;
        color: #000;
      }

      h1:hover {
        cursor: pointer;
      }

      .unselected {
        color: #adadad;
      }
  }

  /* clear fix */
  #list:after {
    content: '';
    display: block;
    clear: both;
  }

  .list-sizer, .list-item {
    width: 100%;
    margin: 20px 0;
    /* height: 30px; */
  /*
    background-blend-mode: multiply;*/
    background-size: cover;
    position: relative;
    border: 1px solid #000;
    position: relative;
    line-height: 0;
  }

  .list-item:hover {
    cursor: move;
  }

  .list-item p {
    font-family: 'Cousine', monospace;
    font-size: 12px;
    font-weight: 400;
    line-height: 16px;
    margin: 10px;
    color: #aaaaaa;
  }

  .list-item h1 {
    font-family: 'Cousine', monospace;
    font-size: 10px;
    margin: 10px;
    font-weight: 400;
    position: absolute;
    bottom: 0;
    color: #fff;
    background-color: #000;
    line-height: 12px;
    padding: 2px;
  }

  .list-item img {
    height: 100%;
    width: 100%;
    object-fit: cover;
  }

  #workspaces {

    display: none;

    ul {
      font-family: 'Work Sans', sans-serif;
      font-weight: 400;
      list-style: none;
      -webkit-padding-start: 0;
      margin-bottom: 0;
    }

    li {
      padding: 10px 0;
    }
  }

}







/* ---- WORKSPACE ----- */

.workspace-item {
  position: absolute;
  border: 2px solid #000;
  background-size: cover;
  width: 100px;
  height: 100px;
  border: 2px solid #000;

  h1 {
    font-family: 'Cousine', monospace;
    font-size: 14px;
    margin: 10px;
    position: absolute;
    bottom: 0;
    left: 0;
    font-weight: 700;
  }

}

.workspace-group {
  padding: 20px;
  box-sizing: border-box;
}

.active {
  background-color: none;
  background-size: cover;
  position: absolute;
  width: 100px;
  height: 100px;
  border: 2px solid #000;
  box-shadow: 12px 12px #000;

  h1 {
    font-family: 'Cousine', monospace;
    font-size: 14px;
    margin: 10px;
    position: absolute;
    bottom: 0;
    left: 0;
    font-weight: 700;
    color: #000;
  }
}

.inactive > rect {
  stroke-width: 5;
}

.active > rect {
  stroke-width: 8;
}

.activeInfo {
  border: 4px solid #000;
}



/* ------ INFO PANEL ------ */

#info-panel {
  position: absolute;
  right: 50px;
  bottom: 50px;
  z-index: 100;
  width: 350px;
  font-family: 'Work Sans', sans-serif;

  h1 {
    font-size: 16px;
    font-weight: 600;
    text-transform: uppercase;
    border: 2px solid #000;
    margin: 0;
    padding: 15px;
  }

  p {
    margin: 0;
    padding: 15px;
  }
}

.metadata, .post, .images {
  border: 2px solid #000;
  box-sizing: border-box;
  overflow: scroll;
  max-height: calc((100vh - 200px)/5);
}

.metadata {
  width: 100%;
  display: flex;
  flex-direction: row

}

.cat {
  font-family: 'Cousine';
  font-weight: 400;
  font-size: 12px;
  width: 50%;
  border-right: 2px solid #000;
}

.desc {
  font-family: 'Cousine';
  font-weight: 400;
  font-size: 12px;
  width: 50%;
}

.post {
  overflow: scroll;
  max-height: 200px;
  width: 100%;
}

.images {
  width: 100%;
  overflow: scroll;
  max-height: 200px;
  padding: 15px;
}

#image-inset:after {
  content: '';
  display: block;
  clear: both;
}

.image-sizer, .image-item {
  width: 100px;
  height: 80px;
  padding: 10px;
  box-sizing: border-box;
}

.image-item {
  float: left;

  img {
    object-fit: cover;
    scale: 2;
    display: block;
    height: 100%;
    width: 100%;
  }
}






::-webkit-scrollbar {
    width: 12px;
}

/* Track */
::-webkit-scrollbar-track {
    background: #fff;

}

/* Handle */
::-webkit-scrollbar-thumb {
    background: #000;
}

::-webkit-scrollbar:horizontal {
  display: none;
}

